<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- App stuff -->
    <string name="app_name">aprs.tools</string>
    <string name="app_version">0.1 alpha</string>

    <string name="default_aprs_server">rotate.aprs.net</string>

    <!-- Content Descriptions -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu items -->
    <string name="callsign_menu_item_default">Set Callsign</string>
    <string name="map_view_menu_item">Map View</string>
    <string name="list_view_menu_item">List View</string>
    <string name="about_menu_item">About</string>
    <string name="settings_menu_item">Preferences</string>

    <!-- Copyright notices -->
    <string name="aprstools_about_heading">About</string>
    <string name="aprstools_intro">aprs.tools is written by Ellen Poe, and it is
        distributed under the terms of the
        <a href="https://www.gnu.org/licenses/">GNU General Public License, version 3</a>. Ellen
        reminds users of aprs.tools to follow all laws governing the use of amateur radio equipment
        and frequencies in your area. Precautions have been taken to reduce the risk of major bugs
        and spurious transmissions, but it is your sole responsibility to ensure your equipment,
        including any software you use to operate your station, is functioning properly and
        configured correctly. If you need to contact the developer, you can email her at
        <a href="ellen.h.poe+aprstools@gmail.com">ellen.h.poe+aprstools@gmail.com</a>. Please don\'t
        remove the +aprstools tag because it lets me keep my email organized. You can find a copy
        of the aprs.tools source on GitHub at
        <a href="https://github.com/ellenpoe/aprs.tools">https://github.com/ellenpoe/aprs.tools</a>.
    </string>
    <string name="copyright_info_heading">Copyright Information</string>
    <string name="copyright_info_aprstools_name">aprs.tools</string>
    <string name="copyright_info_aprstools_intro" tools:ignore="TypographyOther">Copyright (C) 2019 Ellen Poe</string>
    <string name="copyright_info_autumn_name">Whimsy Compiler Framework</string>
    <string name="copyright_info_autumn_intro">
        aprs.tools contains software from the whimsy compiler framework, by Nicolas Laurent. Whimsy makes it possible
        for aprs.tools to parse APRS packets and modify them in a simple (and almost whimsical) way. A copy of whimsy
        is available at <a href="https://github.com/norswap/whimsy">https://github.com/norswap/whimsy</a>.
        Parts of whimsy are reproduced under the BSD 3-Clause License, shown below.
    </string>
    <string name="copyright_info_and_many_more">And many more!</string>

    <!-- User-facing strings -->
    <string name="settings">Settings</string>
    <string name="track_position">Start Tracking</string>
    <string name="start_igate">Start IGate</string>
    <string name="callsign_prompt">You need a government-issued amateur radio callsign to use this software. Please enter it below.</string>
    <string name="callsign_prompt_title">Set Callsign</string>
    <string name="done_text">Done</string>
    <string name="bluetooth_prompt_label">Pick your TNC</string>
    <string name="unknown_tnc">Unknown Bluetooth Device</string>
    <string name="passcode_prompt">You need an APRS-IS passcode to use this feature. Please enter it below.</string>
    <string name="passcode_prompt_title">Set APRS-IS Passcode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_party_software">Third party software</string>
    <string name="aprstools_copyright">aprs.tools Copyright</string>
    <string name="third_party_licenses">Third Party Licenses</string>
    <string name="third_party_thank_you">This is a list of third party software that makes aprs.tools tick.
        Big thank you to the open source community for creating wonderful tools. Without these projects,
        aprs.tools wouldn\'t exist.
    </string>
    <string name="dep_license_label">License:</string>
    <string name="dep_license_link_label">License link:</string>
    <string name="dep_project_link_label">Project link:</string>

</resources>
