<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/aprstools_about_heading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"
            android:text="@string/aprstools_intro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/copyright_info_heading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"
            android:text="@string/copyright_info_aprstools_intro"/>

        <TextView
            android:id="@+id/aprstools_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/copyright_info_autumn_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web|email"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"
            android:text="@string/copyright_info_autumn_intro"/>

        <TextView
            android:id="@+id/autumn_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="@dimen/about_screen_margin"
            android:layout_marginStart="@dimen/about_screen_margin"
            android:layout_marginEnd="@dimen/about_screen_margin"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>
</ScrollView>