<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp">

    <View style="@style/Divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp">
        <TextView
            android:id="@+id/dep_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/dep_artifact"
            android:layout_toEndOf="@id/dep_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:ellipsize="marquee"
            android:singleLine="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/dep_copyright_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:id="@+id/dep_license_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dep_license_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dep_license_label" />

        <TextView
            android:id="@+id/dep_license_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dep_license_link_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dep_license_link_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dep_license_link_label" />

        <TextView
            android:id="@+id/dep_license_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dep_link_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dep_link_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dep_project_link_label" />

        <TextView
            android:id="@+id/dep_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />
    </LinearLayout>

</LinearLayout>